--- a/src/scss/config/themes.scss
+++ b/src/scss/config/themes.scss
@@ -38,7 +38,7 @@ $themes: (
         (
           code-bg: white,
           keyword: red,
-          operator: green,
+          operator: orange,
           property: Chocolate,
           variable: olivedrab,
           number: hotpink,
